# flight_controller_temp

./: .gitignore  CMakeLists.txt  PID_Settings.txt  README.md  package.xml
flight_controller_node/: flight_controller_node.cpp
global2inertial_node/: global2inertial_node.cpp
include/: AccelerationMsg.hpp  ActuationSystem.hpp  Actuator.hpp  AttitudeMsg.hpp  BatteryMonitor.hpp  Block.hpp  BodyRateMsg.hpp  BoolMessage.hpp  ButterFilter_120hz.hpp  ButterFilter_2nd_200Hz.hpp  ButterFilter_Xsens.hpp  ButterWorthFilter.hpp  CallbackHandler.hpp  CircularProcessVariableReference.hpp  ComplementaryFilterNoIntegration.hpp  ControlSystem.hpp  ControlSystemMessage.hpp  Controller.hpp  ControllerMessage.hpp  DataMessage.hpp  Demux3D.hpp  Differentiator.hpp  DoubleMsg.hpp  DoublePointerMsg.hpp  FlightScenarioMessage.hpp  FloatMessage.hpp  FloatMsg.hpp  GPS.hpp  Global2Inertial.hpp  HR_LR_position_fusion.hpp  HeadingMsg.hpp  HexaActuationSystem.hpp  InputPort.hpp  InvertedSwitch.hpp  MRFTController.hpp  MRFT_values.hpp  Matrix3by3.hpp  MotionCapture.hpp  Mux3D.hpp  OptiTrack.hpp  (+74 more)
include/ROSUnits/: BooleanMsg.hpp  DoubleMsg.hpp  EmptyMsg.hpp  IntegerMsg.hpp  MsgEmitter.hpp  MsgReceiver.hpp  PointsMsg.hpp  PoseMsg.hpp  PosesMsg.hpp  ROSUnit.hpp  ROSUnit_EmptyClnt.hpp  ROSUnit_EmptySrv.hpp  ROSUnit_FloatPub.hpp  ROSUnit_FloatSub.hpp  ROSUnit_Point2DPub.hpp  ROSUnit_Point2DSub.hpp  ROSUnit_PointPub.hpp  ROSUnit_PointSub.hpp  ROSUnit_SetFloatClnt.hpp  ROSUnit_SetFloatSrv.hpp  ROSUnit_SetIntClnt.hpp  ROSUnit_SetIntSrv.hpp  ROSUnit_SetPointClnt.hpp  ROSUnit_SetPointSrv.hpp  ROSUnit_SetPointsClnt.hpp  ROSUnit_SetPointsSrv.hpp  ROSUnit_SetPoseClnt.hpp  ROSUnit_SetPoseSrv.hpp  ROSUnit_SetPosesClnt.hpp  ROSUnit_SetPosesSrv.hpp  ROSUnit_SetVectorClnt.hpp  ROSUnit_SetVectorSrv.hpp  TaggedPosesMsg.hpp  UpdatePoseMessage.hpp  Vector2D.hpp  Vector2DMsg.hpp  VectorDoubleMsg.hpp  VectorMsg.hpp
launch/: firmware.launch  flight_controller_all_nodes.launch
msg/: Controller_param.msg  Info.msg  MRFT_param.msg  PID_param.msg  SM_param.msg
old_code/: TimedBlock.cpp  TimedBlock.hpp
providers_node/: providers_node.cpp
src/: BaseSerialParser.cpp  BatteryMonitor.cpp  BodyRateMsg.cpp  ButterFilter_120hz.cpp  ButterFilter_2nd_200Hz.cpp  ButterFilter_Xsens.cpp  ButterWorthFilter.cpp  CircularProcessVariableReference.cpp  ComplementaryFilterNoIntegration.cpp  ControlSystem.cpp  ControlSystemMessage.cpp  ControllerMessage.cpp  DataMessage.cpp  Demux3D.cpp  Differentiator.cpp  ESCMotor.cpp  Global2Inertial.cpp  HR_LR_position_fusion.cpp  HexaActuationSystem.cpp  InputPort.cpp  InvertedSwitch.cpp  MRFTController.cpp  Mux3D.cpp  OptiTrack.cpp  OutputPort.cpp  PIDController.cpp  PIDplusMRFTController.cpp  PVConcatenator.cpp  PitchProviderMessage.cpp  Pitch_PVProvider.cpp  Port.cpp  PoseStampedMsg.cpp  ProcessVariableDifferentiator.cpp  ProcessVariableReference.cpp  QuadActuationSystem.cpp  QuaternionMessage.cpp  ROSMsg.cpp  ROSUnit_Arm.cpp  ROSUnit_BroadcastData.cpp  ROSUnit_Optitrack.cpp  (+39 more)
src/ROSUnits/: BooleanMsg.cpp  DoubleMsg.cpp  DoublePointerMsg.cpp  MsgEmitter.cpp  MsgReceiver.cpp  ROSUnit_EmptyClnt.cpp  ROSUnit_EmptySrv.cpp  ROSUnit_FloatPub.cpp  ROSUnit_FloatSub.cpp  ROSUnit_Point2DPub.cpp  ROSUnit_Point2DSub.cpp  ROSUnit_PointPub.cpp  ROSUnit_PointSub.cpp  ROSUnit_SetFloatClnt.cpp  ROSUnit_SetFloatSrv.cpp  ROSUnit_SetIntClnt.cpp  ROSUnit_SetIntSrv.cpp  ROSUnit_SetPointClnt.cpp  ROSUnit_SetPointSrv.cpp  Timer.cpp  (+9 more)
srv/: Restricted_Norm_Settings.srv  Update_Controller.srv  Update_Controller_MRFT.srv  Update_Controller_PID.srv  Update_Controller_SM.srv  Update_Pose_Reference.srv
waypoint_reference_node/: waypoint_reference_node.cpp
(+10 files in other folders)
